--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ transition: all 0.4s ease 0s;
 <tr>
 <td>Nama</td>
 <td>Rafi Muhammad Naufal</td>
-<td rowspan="10" align="center"><img src="/Biodata/WhatsApp Image 2024-10-26 at 20.12.07.jpeg" width="210" height="313"></td>
+<td rowspan="10" align="center"><img src="https://github.com/RizkyErdi/Biodata/blob/main/WhatsApp%20Image%202024-10-26%20at%2020.12.07.jpeg" width="210" height="313"></td>
 </tr>
 <tr>
    <td>Gender</td>
